--- a/styles/_responsive.scss
+++ b/styles/_responsive.scss
@@ -13,6 +13,7 @@
     .autor {
       font-size: 8px;
       @include centerDiv(4.5);
+      overflow: scroll;
     }
     .social {
       width: 20%;
