--- a/styles/style.css
+++ b/styles/style.css
@@ -114,10 +114,6 @@ body {
           transform: translate(-50%, -50%);
   width: 50%;
   height: 70%;
-  text-overflow: clip;
-  overflow: hidden;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
 }
 
 .text {
@@ -345,13 +341,16 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    top: 45%;
+    top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
+    overflow: scroll;
+    display: block;
   }
   .text {
     font-size: 15px;
+    top: 50%;
   }
   .icon {
     width: 18px;
